...
                                    <navigationItem id="yth-jo-S7M">
                                        <nil key="title"/>
                                        <barButtonItem key="leftBarButtonItem" title="Filters" id="hly-Eo-7DZ">
                                            <connections>
                                                <segue destination="Htm-nE-tbr" kind="presentation" id="wD0-oN-DyZ"/>
...
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <segments>
                                                <segment title="List"/>
                                                <segment title="Map"/>
                                            </segments>
                                            <connections>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Churches" image="church_icon.png" id="7ng-81-dcr"/>
                    <connections>
                        <outlet property="filtersButton" destination="hly-Eo-7DZ" id="kZe-sK-Pvz"/>
...
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Service Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nt8-yW-UwQ">
                                            <rect key="frame" x="25" y="100" width="550" height="21"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Denomination" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LbA-9O-np1">
                                            <rect key="frame" x="25" y="37" width="550" height="21"/>
                                            <constraints>
...
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Worship Style" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJj-7V-wSx">
                                            <rect key="frame" x="25" y="58" width="550" height="21"/>
                                            <constraints>
...
                                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                            </imageView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHARE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RkX-tQ-msU">
                                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                                <constraints>
...
                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                <items>
                                    <navigationItem title="Bookmarks" id="CSB-Ke-2j1">
                                        <barButtonItem key="rightBarButtonItem" title="Edit" id="URa-sI-b01">
                                            <connections>
                                                <action selector="EditButton:" destination="RcY-e1-gir" id="pa4-uT-Knr"/>
...
                                            </connections>
                                        </switch>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filter By Service Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8gp-nC-Kgg">
                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                    <tabBarItem key="tabBarItem" title="Search" image="search" id="UPy-Io-9b7" userLabel="viewMap"/>
                    <navigationItem key="navigationItem" title="Filters" id="yMg-Ll-VgC">
                        <barButtonItem key="leftBarButtonItem" title="Done" id="mOd-qY-YdZ">
                            <connections>
                                <segue destination="pmu-aS-dTd" kind="unwind" unwindAction="doneWithFilters:" id="B7C-2b-ayd"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Clear" id="On9-rq-7rk">
                            <color key="tintColor" red="1" green="0.074743433492410416" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
...
