...
                }
                
                return cell
            } else if(indexPath.row == 2) {
                let cell = tableView.dequeueReusableCellWithIdentifier("filterCell", forIndexPath: indexPath) as! FilterViewCell
                
                cell.filter_name.text = "To"
                
                if var times = filterSelected["times"] as? [String:AnyObject] {
                    
                    //let day : String = times["day"] as! String
                    let t : Int = times["end"] as! Int
                    var hour : Int = t/60
...
