...
    var filterByTime = false
    
    var results : [Church] = []
    var bookmarks : [Church] = []
    var allTimes : [Time] = []
    
    var filterTypes : Dictionary<String, String> = ["denomination":"Denomination", "style":"Worship Style", "size":"Congregation Size"]
    var filterData : Dictionary<String, [AnyObject]> = [:]
    
    var currentParameters : Dictionary<String,AnyObject>
    var currentStart = 0
    var currentLimit = 0
    var currentLocation : PFGeoPoint
...
