...

    func done(child: DetailedViewController) {
        
    }

    let churches = ["Covenant OPC", "East Main", "Church of the Flying Spaghetti Monster"]
    let worshipStyles = ["Contemporary", "Traditional", "80's Discotech"]
    var distance: Int!
    let streets = ["123 Holy Street", "321 Grace Street", "1337 hax street"]
    let times = ["10:00 - 11:00", "11:00 - 12:00", "We end before kickoff"]
    override func viewDidLoad() {
        super.viewDidLoad()

...
